@@ -8,6 +8,7 @@ Mark "!": change that can break compatibility with older version
 
 version 5.0.5 ????
 ========================
+o add "nehan-clone" class to the blocks generated by cloned style.
 
 version 5.0.4 2014/12/8
 ========================
